Improved functionality and Releasing new version